# openMVS

./: .gitignore  CMakeLists.txt  vcpkg.json
.claude/agents/: analyze-codebase.md  catalog-features.md  suggest-improvements.md  trace-pipelines.md  write-docs.md
.github/: copilot-instructions.md
.github/workflows/: continuous_integration.yml  msvc.yml
apps/CreateStructure/: CreateStructure.cpp
apps/DensifyPointCloud/: DensifyPointCloud.cpp
apps/ExtractKeyframes/: ExtractKeyframes.cpp
apps/ReconstructMesh/: ReconstructMesh.cpp
apps/RefineMesh/: RefineMesh.cpp
apps/Tests/: Tests.cpp  TestsMVS.cpp  TestsSFM.cpp  TestsSFM.h
apps/TextureMesh/: TextureMesh.cpp
apps/TransformScene/: TransformScene.cpp
apps/Viewer/: ArcballControls.cpp  BufferObjects.cpp  BufferObjects.h  CMakeLists.txt  Camera.cpp  Camera.h  FirstPersonControls.cpp  Image.cpp  Image.h  OpenGLDebug.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SelectionController.cpp  SelectionController.md  Shader.cpp  Shader.h  UI.cpp  UI.h  Viewer.cpp  Window.cpp  Window.h
apps/Viewer/shaders/: selection.geom
docs/wiki/: Building.md
libs/Common/: Common.cpp  Common.h  Config.h  CriticalSection.h  EventQueue.h  Hash.h  List.h  Log.cpp  Log.h  Maths.h  OBB.h  OBB.inl  Octree.inl  SML.h  Semaphore.h  Strings.h  Types.cpp  Types.h  Types.inl  Util.cpp  Util.h  Util.inl  UtilCUDA.cpp  UtilCUDA.h
libs/IO/: CMakeLists.txt  Common.h  OBJ.h
libs/MVS/: CMakeLists.txt  Camera.h  Common.h  DepthMap.cpp  DepthMap.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  PatchMatchCUDA.cpp  PatchMatchMetal.h  PatchMatchMetal.metal  PatchMatchMetal.mm  Platform.h  PointCloud.cpp  PointCloud.h  PythonWrapper.cpp  Scene.cpp  Scene.h  SceneDensify.cpp  SceneDensify.h  SceneGeometry.cpp  SceneReconstruct.cpp  SceneRefine.cpp  SceneRefineCUDA.cpp  SceneTexture.cpp  SemiGlobalMatcher.cpp
libs/Math/: Common.h  DisjointSet.h  LBP.h  LeastAbsoluteDeviationSolver.h  SimilarityTransform.cpp  SimilarityTransform.h
libs/SFM/: BundleAdjustment.h  BundleAdjustmentCostFunctions.h  CMakeLists.txt  Camera.cpp  (+14 more)
(+10 files in other folders)
